OpenVi 7.0.15 -> OpenVi 7.1.16: Sun Feb 27 06:48:13 2022
        + Clear pointer after ending screen for safety
        + Documentation / man page improvements and minor corrections
        + Apply `expandtab` to lines filtered with the `!` command, via `nvi2`
        + OpenBSD 7.1 enters beta; bumping OpenBSD version to 7.1
        + Modify text `%s/OpenBSD vi/OpenVi/` in `common/recover.c`
        + Minor updates to documentation and `README.md`
        + Provide a more helpful message when ex-mode has background screens
        + Fully redraw screen on refresh with ^L / ^R
        + Make `taglength` work correctly; fix from nvi 1.8x
        + Make `join` work as specified in the POSIX standard; nvi 1.8x
        + Fix problem with autoindenting and ^^D input; patch from nvi 1.8x
        + Fix to reset screen offset of top line exceeding number of screens
          adapted from Sven Verdoolaege's nvi 1.8x patch
        + Fix tty from ex-mode on `q` when there are multiple screens; patch
          from Al Viro via nvi 1.8x; also minor redraw adjustments
        + Use `-Wall` by default for all builds; drop `-Wextra` for release
        + Switch default optimization level to `-Os` for release builds; use
          `-D_FORTIFY_SOURCE=2` for non-debugging builds by default as well
        + Do not warn about `ttyname` or `ioctl` failures for `stderr` unless
          `stderr` is a tty according to `isatty()`
        + Fix out of bounds access in file completion
        + Raise the maximum ex-script mmap size limit
        + `DEBUG=1` now defaults to `-O0` rather than `-Og`
        + Avoid undefined behavior in `vs_crel()` and `ex_is_abbrev()`
        + Suppress more warnings and potential warnings

OpenVi 7.0.12 -> OpenVi 7.0.15: Thu Feb 24 12:18:33 2022
        + Avoid O_PATH clash in source proper (rather than in awk script)
        + Remove deprecated interpreter internals documentation
        + Actually use `pledge()` for SerenityOS and OpenBSD 5.9 or later